# seoul-insight

./: .gitignore  README.md  docker-compose-app.yml  docker-compose.yml
.github/workflows/: deploy-ai.yml  deploy-api.yml
docs/: ai-service-implementation.md  architecture.md  domain-model.md
docs/schemas/: auth-design.md  chat-design.md  collector-relation.md
on-seoul-agent/: Dockerfile  README.md  main.py  pyproject.toml
on-seoul-agent/agents/: README.md  answer_agent.py  router_agent.py  sql_agent.py  vector_agent.py  workflow.py
on-seoul-agent/core/: config.py  database.py  exceptions.py  logging.py  redis.py
on-seoul-agent/docs/: ai-service-implementation.md
on-seoul-agent/docs/tools/: map_search.md  sql_search.md  vector_search.md
on-seoul-agent/llm/: README.md  client.py  embedder.py  generator.py
on-seoul-agent/middleware/: metrics.py
on-seoul-agent/routers/: chat.py
on-seoul-agent/schemas/: chat.py  events.py  state.py  trace.py
on-seoul-agent/scripts/: ddl.sql  ddl_chat_entities.sql  ddl_indexes_on_data.sql  embed_metadata.py  eval_search.py  verify_traces.py
on-seoul-agent/tests/: conftest.py  test_answer_agent.py  test_chat_router.py  test_database.py  test_embed_metadata.py  test_llm.py  test_llm_client.py  test_llm_external_api.py  test_map_search.py  test_metrics_middleware.py  test_redis.py  test_router_agent.py  test_sql_agent.py  test_sql_search.py  test_vector_agent.py  test_vector_search.py  test_verify_traces.py  test_workflow.py
on-seoul-agent/tools/: README.md  map_search.py  sql_search.py  vector_search.py
on-seoul-api/: .gitignore  Dockerfile  README.md  build.gradle  settings.gradle
on-seoul-api/adapter/: build.gradle
on-seoul-api/app/: README.md  build.gradle
on-seoul-api/application/: build.gradle
on-seoul-api/bootstrap/: README.md  build.gradle
on-seoul-api/collector/: README.md  build.gradle
on-seoul-api/common/: build.gradle
on-seoul-api/docs/: api-service-implementation.md
on-seoul-api/domain/: build.gradle
seoul-insight-agent/: main.py  pyproject.toml
(+145 files in other folders)
